--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
+:root{
+  --background-light: #fff;
+  --background-dark: #404040;
+  --text-warning: #fc7171;
+  --text-black: #515151;
+  --text-gray: #9e9a9a;
+  --text-blue: #576fff;
+  --block-title: #fc9494;
+  --block-btn-portfolio: #ff8383;
+  --block-club-background-yellow: #fbfce2;
+  --block-club-background-ocean: #eafffd;
+  --block-background-red-milk: #FF9D9B;
+  --block-background-red-milk--hover: #FF8380;
+  --block-background-green-milk: #B0FFB7;
+  --block-background-green-milk--hover: #80FF97;
+  --block-background-yellow-milk: #FFF6AE;
+  --block-background-yellow-milk--hover: #FFEF85;
+  --block-background-blue-milk: #AAF2FF;
+  --block-background-blue-milk--hover: #81E9FF;
+  --block-background-purple-milk: #F3DDFE;
+  --block-background-purple-milk--hover: #EFC3FF;
+  --block-background-green-light-milk: #B6FF97;
+  --block-background-green-light-milk--hover: #8BFF6F;
+  --block-background-pink-milk: #FCE3E0;
+  --block-background-pink-milk--hover: #FDCABE;
+  --block-background-brown-milk: #FFCC9E;
+  --block-background-brown-milk--hover: #FFB87F;
+  --text-link: #8eb3ff;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +34,95 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background-light);
 }
+.container{
+  max-width: 1565px;
+  margin: 0 auto;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto auto auto auto;
+  gap: 5% 5%;
+  grid-template-areas:
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". .";
+}
+
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+:root{
+  --background-light: #fff;
+  --background-dark: #404040;
+  --text-warning: #fc7171;
+  --text-black: #515151;
+  --text-gray: #9e9a9a;
+  --text-blue: #5386FF;
+  --block-title: #fc9494;
+  --block-btn-portfolio: #ff8383;
+  --block-background-red-milk: #FF9D9B;
+  --block-background-red-milk--hover: #FF8380;
+  --block-background-green-milk: #B0FFB7;
+  --block-background-green-milk--hover: #80FF97;
+  --block-background-yellow-milk: #FFF6AE;
+  --block-background-yellow-milk--hover: #FFEF85;
+  --block-background-blue-milk: #AAF2FF;
+  --block-background-blue-milk--hover: #81E9FF;
+  --block-background-purple-milk: #F3DDFE;
+  --block-background-purple-milk--hover: #EFC3FF;
+  --block-background-green-light-milk: #B6FF97;
+  --block-background-green-light-milk--hover: #8BFF6F;
+  --block-background-pink-milk: #FCE3E0;
+  --block-background-pink-milk--hover: #FDCABE;
+  --block-background-brown-milk: #FFCC9E;
+  --block-background-brown-milk--hover: #FFB87F;
+  --block-background-orange-milk: #e3e3e3;
+  --block-background-orange-milk--hover: #c9c9c9;
+  --block-background-red-light-milk: #F59463;
+  --block-background-red-light-milk--hover: #F5874E;
+
+
+  --text-link: #8eb3ff;
+}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background-light);
+}
+.container{
+  max-width: 1565px;
+  margin: 0 auto;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto auto auto auto;
+  gap: 5% 5%;
+  grid-template-areas:
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". .";
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
