--- a/src/component/pages/Home/Header.module.css
+++ b/src/component/pages/Home/Header.module.css
@@ -8,7 +8,11 @@
     display:none;
 }
 .logo{
-    width: 25%;
+    width: 20%;
     display: block;
     margin: 0 auto;
+}
+.logo img{
+    width: 100%;
+    margin-left: -45px;
 }
